# p2p-btc-lending

./: .gitignore  .gitmodules  README.md  package-lock.json
broadcast/DeployP2PBTCLending.s.sol/5655/: run-1743890715.json  (+1 more)
diagrams/: borrow-sequence.md  lend-sequence.md  liquidation.md  repay.md
frontend/citrea-lending-frontend/: package-lock.json  package.json  tailwind.config.ts
script/: DeployP2PBTCLending.s.sol
src/: P2PBTCLending.sol  SimplePriceFeed.sol
stable-borrow-cli/: .gitignore  Cargo.toml  docker-compose.yml
stable-borrow-cli/crates/bitcoin-rpc-provider/src/: lib.rs
stable-borrow-cli/crates/dlc-manager/: Cargo.toml
stable-borrow-cli/crates/dlc-manager/src/: contract_updater.rs  lib.rs  manager.rs  payout_curve.rs  utils.rs
stable-borrow-cli/crates/dlc-manager/src/contract/: accepted_contract.rs  contract_input.rs  mod.rs  offered_contract.rs  ser.rs
stable-borrow-cli/crates/dlc-messages/src/: lib.rs  message_handler.rs
stable-borrow-cli/crates/dlc-sled-storage-provider/src/: lib.rs
stable-borrow-cli/crates/dlc/src/: lib.rs  util.rs
stable-borrow-cli/crates/simple-wallet/src/: lib.rs
stable-borrow-cli/examples/configurations/: alice.yml  bob.yml
stable-borrow-cli/examples/contracts/: sample_contract.json  sample_loan.json  sample_loan_expiration.json
stable-borrow-cli/scripts/: gen-sample-offer.sh
stable-borrow-cli/src/: cli.rs  main.rs
stable-borrow-cli/testconfig/config/: default.conf
stable-borrow-cli/testconfig/oracle/: integration.yaml
test/: P2PBTCLending.t.sol
test/mocks/: MockERC20.sol  MockPriceFeed.sol
(+18 files in other folders)
